--- a/application/src/app/components/services/services.component.html
+++ b/application/src/app/components/services/services.component.html
@@ -46,7 +46,7 @@
                 </td>
                 <td>{{ service?.name }}</td>
                 <td>{{ service?.netto | number : '1.2-2'}}</td>
-                <td>{{ service?.vat | number : '1.2-2'}}</td>
+                <td>{{ service?.vat | number : '1.2-2'}}%</td>
                 <td>{{ service?.vatSum | number : '1.2-2'}}</td>
                 <td>{{ service?.brutto | number : '1.2-2'}}</td>
                 <td class="collapsing">
