--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -37,9 +37,9 @@
         <a class="item" [routerLinkActive]="['active']" routerLink="/timetable">
             <i class="calendar icon"></i> Terminarz
         </a>
-        <a class="item">
+        <!-- <a class="item">
             <i class="pie chart icon"></i> Raporty
-        </a>
+        </a> -->
     </div>
     <div *ngIf="!isLoggedIn()">
         <div class="avatar-container item">
