--- a/application/src/app/components/stores/stores.component.html
+++ b/application/src/app/components/stores/stores.component.html
@@ -35,34 +35,127 @@
             <th (click)="sortingBy('brutto')">Brutto
                 <i class="sort icon" [ngClass]="{'descending': (order('brutto')=='DESC'), 'ascending': (order('brutto')=='ASC')}"></i>
             </th>
+            <th class="collapsing"></th>
         </tr>
     </thead>
     <tbody *ngIf="isReturn()">
-        <tr *ngFor="let store of stores">
-            <td class="collapsing">
-                <div class="ui fitted checkbox">
-                    <input type="checkbox" (change)="addDelete(store.id)" [checked]="isCheck(store.id)">
-                    <label></label>
-                </div>
-            </td>
-            <td><a [routerLink]="['/stores', store.id]">{{ store?.name }}</a></td>
-            <td>{{ store?.quantity }} {{ store?.unit }}</td>
-            <td>{{ store?.netto | number : '1.2-2'}}</td>
-            <td>{{ store?.vat | number : '1.2-2'}}</td>
-            <td>{{ store?.vatSum | number : '1.2-2'}}</td>
-            <td>{{ store?.brutto | number : '1.2-2'}}</td>
+        <tr *ngFor="let store of stores; let key = index">
+            <ng-container *ngIf="!isEdited(store.id)">
+                <td class="collapsing">
+                    <div class="ui fitted checkbox">
+                        <input type="checkbox" (change)="addDelete(store.id)" [checked]="isCheck(store.id)">
+                        <label></label>
+                    </div>
+                </td>
+                <td>{{ store?.name }}</td>
+                <td>{{ store?.quantity }} {{ store?.unit }}</td>
+                <td>{{ store?.netto | number : '1.2-2'}}</td>
+                <td>{{ store?.vat | number : '1.2-2'}}%</td>
+                <td>{{ store?.vatSum | number : '1.2-2'}}</td>
+                <td>{{ store?.brutto | number : '1.2-2'}}</td>
+                <td class="collapsing">
+                    <div class="ui  blue icon button mini" (click)="edit(store.id, key)"><i class="edit icon"></i></div>
+                    <div class="ui  red icon button mini" (click)="deleteById(store.id)"><i class="trash icon"></i></div>
+                </td>
+            </ng-container>
+            <ng-container *ngIf="isEdited(store.id)">
+                <td style="text-align: center;">
+                </td>
+                <td>
+                    <div class="ui form">
+                        <div class="field">
+                            <input type="text" name="name" [(ngModel)]="inputStore.name">
+                        </div>
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="quantity" [(ngModel)]="inputStore.quantity" (blur)="quantityBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="netto" [(ngModel)]="inputStore.netto" (blur)="nettoBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui right labeled input">
+                        <input type="text" name="vat" style="width: 50px;" [(ngModel)]="inputStore.vat" (blur)="vatBlur()">
+                        <div class="ui basic label">
+                            %
+                        </div>
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="vatSum" [(ngModel)]="inputStore.vatSum" (blur)="vatSumBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="brutto" [(ngModel)]="inputStore.brutto" (blur)="bruttoBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui  green icon button mini" (click)="update(store.id)"><i class="checkmark icon"></i></div>
+                    <div class="ui  red icon button mini" (click)="hideEdit()"><i class="remove icon"></i></div>
+                </td>
+            </ng-container>
+        </tr>
+        <tr  *ngIf="showAdd">
+            <td style="text-align: center;">
+                </td>
+                <td>
+                    <div class="ui form">
+                        <div class="field">
+                            <input type="text" name="name" [(ngModel)]="inputStore.name">
+                        </div>
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="quantity" [(ngModel)]="inputStore.quantity" (blur)="quantityBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="netto" [(ngModel)]="inputStore.netto" (blur)="nettoBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui right labeled input">
+                        <input type="text" name="vat" style="width: 50px;" [(ngModel)]="inputStore.vat" (blur)="vatBlur()">
+                        <div class="ui basic label">
+                            %
+                        </div>
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="vatSum" [(ngModel)]="inputStore.vatSum" (blur)="vatSumBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="brutto" [(ngModel)]="inputStore.brutto" (blur)="bruttoBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui  green icon button mini" (click)="addNewStore()"><i class="checkmark icon"></i></div>
+                    <div class="ui  red icon button mini" (click)="showAdd = false"><i class="remove icon"></i></div>
+                </td>
         </tr>
     </tbody>
     <tbody *ngIf="!isReturn()">
         <tr>
-            <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
+            <td colspan="9" class="ui center aligned" style="font-size: 20px; color: #ccc;">
                 Nie znaleziono
             </td>
         </tr>
     </tbody>
     <tfoot>
         <tr>
-            <th colspan="8">
+            <th colspan="9">
                 <button class="ui  red labeled icon button" [disabled]="isDelete() || deleteLoading" [ngClass]="{'loading': deleteLoading}" (click)="deleteChecked()">
                     <i class="trash icon"></i> Usuń
                 </button>
@@ -87,6 +180,6 @@
         </tr>
     </tfoot>
 </table>
-<div class="ui green labeled icon button" [routerLink]="['/stores/add']">
+<div class="ui green labeled icon button" (click)="add()">
     <i class="add icon"></i> Nowa pozycja
 </div>
