Orders, clients, employees

--- a/application/src/app/components/consumers/consumer.add.component.html
+++ b/application/src/app/components/consumers/consumer.add.component.html
@@ -100,7 +100,7 @@
                             <div class="ui label">
                                 PL
                             </div>
-                            <input type="text" name="bankAccount" pattern="[0-9]" placeholder="Numer konta" [(ngModel)]="consumer.bankAccount">
+                            <input type="text" name="bankAccount" pattern="[0-9]{26}" placeholder="Numer konta" [(ngModel)]="consumer.bankAccount">
                         </div>
                     </div>
                 </div>
