--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -31,9 +31,9 @@
         <a class="item" [routerLinkActive]="['active']" [routerLink]="['/stores']">
             <i class="grid layout icon"></i> Magazyn
         </a>
-        <a class="item" [routerLinkActive]="['active']" [routerLink]="['/tires']">
+        <!-- <a class="item" [routerLinkActive]="['active']" [routerLink]="['/tires']">
             <i class="selected radio icon"></i> Opony
-        </a>
+        </a> -->
         <a class="item" [routerLinkActive]="['active']" routerLink="/timetable">
             <i class="calendar icon"></i> Terminarz
         </a>
