--- a/application/src/app/components/about/about.component.html
+++ b/application/src/app/components/about/about.component.html
@@ -4,6 +4,6 @@
     Projekt jest rozwijany jako projekt OpenSource. Pliki i kod projektu jest udostępniony na GitHub.
 </p>
 <p>
-    Ta strona została stworzona jedynie w celach prezentacyjnych. Służy do sprawdzania i przetestowania aplikacji.<br>
-    Nie odpowiadam z wszelkie informacje i dane umieszczane tutaj przez osoby korzystające ze strony.
+    Ta strona została stworzona jedynie w celach prezentacyjnych. Służy do sprawdzania i przetestowania aplikacji.
+    <br> Nie odpowiadam z wszelkie informacje i dane umieszczane tutaj przez osoby korzystające ze strony.
 </p>
