--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -110,6 +110,10 @@
     color: #000;
 }
 
+.document-buttons .button {
+    margin-bottom: 5px;
+}
+
 ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
