--- a/application/src/app/components/timetable/timetable.component.html
+++ b/application/src/app/components/timetable/timetable.component.html
@@ -12,6 +12,9 @@
             </button>
         </div>
     </div>
+    <button class="ui button" style="float: right; margin-top: -20px;" (click)="now()">
+        Dzisiaj
+    </button>
     <br>
     <br>
     <div class="timetable">
