--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -41,7 +41,7 @@
             <i class="pie chart icon"></i> Raporty
         </a> -->
     </div>
-    <div *ngIf="!isLoggedIn()">
+    <div *ngIf="!isLoggedIn()" class="sidebar-content">
         <div class="avatar-container item">
             <div class="first-letter-circle">W</div>
             <h2>Warsztat</h2>
