--- a/application/src/app/components/consumers/consumer.component.html
+++ b/application/src/app/components/consumers/consumer.component.html
@@ -29,7 +29,14 @@
                         <td>{{ document.date | date: 'dd/MM/yyyy' }}</td>
                         <td>{{ document.dateOfPayment | date: 'dd/MM/yyyy' }}</td>
                         <td>{{ document.paymentMethod }}</td>
-                        <td>{{document.paid ? "Tak" : "Nie"}}</td>
+                        <td>{{ document.paid ? "Tak" : "Nie" }}</td>
+                    </tr>
+                </tbody>
+                <tbody *ngIf="!returnDocuments">
+                    <tr>
+                        <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
+                            Ten klient nie posiada dokumentów
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -51,7 +58,14 @@
                         <td><a [routerLink]="['/vehicles', order.vehicleId]">{{ order.registrationNumber }}</a></td>
                         <td>{{ order.date | date: 'dd/MM/yyyy' }}</td>
                         <td>{{ order.term | date: 'dd/MM/yyyy' }}</td>
-                        <td>{{order.completed ? "Tak" : "Nie"}}</td>
+                        <td>{{ order.completed ? "Tak" : "Nie" }}</td>
+                    </tr>
+                </tbody>
+                <tbody *ngIf="!returnOrders">
+                    <tr>
+                        <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
+                            Ten klient nie posiada zleceń
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -72,6 +86,13 @@
                         <td>{{ vehicle?.mark }}</td>
                         <td>{{ vehicle?.model }}</td>
                         <td>{{ vehicle?.engine }}</td>
+                    </tr>
+                </tbody>
+                <tbody *ngIf="!returnVehicles">
+                    <tr>
+                        <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
+                            Ten klient nie posiada pojazdów
+                        </td>
                     </tr>
                 </tbody>
             </table>
