--- a/application/src/app/components/vehicles/vehicle.add.component.html
+++ b/application/src/app/components/vehicles/vehicle.add.component.html
@@ -19,7 +19,7 @@
                     <div class="field">
                         <label>Silnik</label>
                         <div class="field">
-                            <input type="text" name="engine" placeholder="Silnik" [(ngModel)]="vehicle.engine">
+                            <input type="text" name="engine" placeholder="Typ, pojemność" [(ngModel)]="vehicle.engine">
                         </div>
                     </div>
                     <div class="field">
