--- a/application/src/app/components/orders/orders.component.html
+++ b/application/src/app/components/orders/orders.component.html
@@ -57,7 +57,7 @@
                     <label></label>
                 </div>
             </td>
-            <td><a [routerLink]="['/orders', order.id]">#ID - {{ order.id }}</a></td>
+            <td><a [routerLink]="['/orders', order.id]">Zlecenie {{ order.id }} - {{ order.mark }} {{ order.model }}</a></td>
             <td><a [routerLink]="['/vehicles', order.vehicleId]">{{ order.registrationNumber }}</a></td>
             <td>{{ order.date | date: 'dd/MM/yyyy' }}</td>
             <td>{{ order.term | date: 'dd/MM/yyyy' }}</td>
